--- a/MultiplicationTable/Pages/Index.razor
+++ b/MultiplicationTable/Pages/Index.razor
@@ -8,7 +8,7 @@
         <div class="text-nowrap">
             @currentQuestion.Question
         </div>
-        <input type="number" @bind="@currentQuestion.Answer" style="width:60px" class="form-control mx-2" />
+        <input type="tel" @bind="@currentQuestion.Answer" style="width:60px" class="form-control mx-2" autofocus />
         <button class="btn btn-primary" @onkeydown="@Enter" @onclick="NextQuestion">Next</button>
     </div>
     <button @onclick="Skip">Skip</button>
