--- a/MultiplicationTable/Shared/MainLayout.razor
+++ b/MultiplicationTable/Shared/MainLayout.razor
@@ -1,14 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
-<MudThemeProvider/>
-<MudDialogProvider/>
-<MudSnackbarProvider/>
-
-
-
-<div class="page">
+<div class="page vh-100">
     <main>
-        <article class="content px-4">
+        <article class="d-flex flex-column px-4 h-100">
             @Body
         </article>
     </main>
