--- a/MultiplicationTable/wwwroot/css/app.css
+++ b/MultiplicationTable/wwwroot/css/app.css
@@ -87,3 +87,10 @@ a, .btn-link {
     .loading-progress-text:after {
         content: var(--blazor-load-percentage-text, "Loading");
     }
+
+.btn-bottom {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
