--- a/MultiplicationTable/Pages/Index.razor
+++ b/MultiplicationTable/Pages/Index.razor
@@ -12,7 +12,7 @@
             <input @ref="AnswerField" type="tel" @bind="@currentQuestion.Answer" style="width:60px" class="form-control mx-2" autofocus />
 
         </div>
-        <button class="btn btn-primary mt-auto mb-2 w-100 btn-bottom" @onkeydown="@Enter" @onclick="Next">Next</button>
+        <button class="btn btn-primary mt-auto mb-2 w-100" @onkeydown="@Enter" @onclick="Next">Next</button>
         <button @onclick="CalcResult">CalcResult</button>
     </div>
 
