--- a/MultiplicationTable/Pages/Index.razor
+++ b/MultiplicationTable/Pages/Index.razor
@@ -4,7 +4,17 @@
 
 @if (currentQuestion != null)
 {
-    <div class="d-flex flex-column justify-content-center align-items-center h-100">
+    <div class="d-flex justify-content-center p-3">
+        <div class="d-flex align-items-center h-100">
+            <h5 class="text-nowrap mb-0 me-2">
+                @currentQuestion.Question
+            </h5>
+            <input @ref="AnswerField" type="text" inputmode="decimal" class="form-control form-control-lg" @bind="@currentQuestion.Answer" style="width:60px" autofocus />
+        </div>
+        <button id="next" class="btn btn-primary btn-lg" @onclick="Next">Next</button>
+    </div>
+
+   @* <div class="d-flex flex-column justify-content-center align-items-center h-100">
         <div class="d-flex align-items-center h-100">
             <h5 class="text-nowrap mb-0">
                 @currentQuestion.Question
@@ -14,7 +24,7 @@
         </div>
         <button id="next" class="btn btn-primary mt-auto mb-2 w-100" @onkeydown="@Enter" @onclick="Next">Next</button>
         <button @onclick="CalcResult">CalcResult</button>
-    </div>
+    </div>*@
 
 }
 
