--- a/MultiplicationTable/Pages/Index.razor
+++ b/MultiplicationTable/Pages/Index.razor
@@ -2,41 +2,27 @@
 
 <PageTitle>Multiplication Table</PageTitle>
 
-<style>
-    #next {
-        position: fixed;
-        width: calc(100% - 30px);
-        bottom: 10px;
-    }
-</style>
-
-@if (currentQuestion != null)
+@if (CurrentQuestion != null)
 {
-    <div class="d-flex justify-content-center p-3">
-        <div class="d-flex align-items-center h-100 overflow-hidden">
+    <div class="d-flex justify-content-center p-3 overflow-hidden">
+        <div class="d-flex align-items-center h-100">
             <h5 class="text-nowrap mb-0 me-2">
-                @currentQuestion.Question
+                @CurrentQuestion.Question
             </h5>
-            <input @ref="AnswerField" type="text" inputmode="decimal" class="form-control form-control-lg" @bind="@currentQuestion.Answer" style="width:90px" />
+            <input @ref="AnswerField" type="text" inputmode="decimal" class="form-control form-control-lg" @bind="@CurrentQuestion.Answer" style="width:60px" />
+        </div>
+        <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%"></div>
+        </div>
+        <hr/>
+        <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar" style="width: 25%"></div>
         </div>
         <button id="next" class="btn btn-primary btn-lg" @onclick="Next">Next</button>
     </div>
-
-    @* <div class="d-flex flex-column justify-content-center align-items-center h-100">
-        <div class="d-flex align-items-center h-100">
-            <h5 class="text-nowrap mb-0">
-                @currentQuestion.Question
-            </h5>
-            <input @ref="AnswerField" type="text" inputmode=decimal @bind="@currentQuestion.Answer" style="width:60px" class="form-control mx-2" autofocus />
-
-        </div>
-        <button id="next" class="btn btn-primary mt-auto mb-2 w-100" @onkeydown="@Enter" @onclick="Next">Next</button>
-        <button @onclick="CalcResult">CalcResult</button>
-    </div>*@
-
 }
 
-@if (showResults)
+@if (ShowResults)
 {
     <ApexChart TItem="AnswerResult"
                Title="Result">
