--- a/MultiplicationTable/Pages/Index.razor
+++ b/MultiplicationTable/Pages/Index.razor
@@ -5,7 +5,7 @@
 
 @if (CurrentQuestion != null)
 {
-    <div class="d-flex justify-content-center p-3 overflow-hidden">
+    <div class="d-flex justify-content-center p-3 mt-5">
         <div class="d-flex align-items-center h-100">
             <h5 class="text-nowrap mb-0 me-2">
                 @CurrentQuestion.Question
@@ -44,4 +44,5 @@
                          OrderByDescending="e=>e.Y"
                          PointColor="e=> GetPointColor(e)" />
     </ApexChart>
+    <button class="btn btn-dark w-100" onclick="shareResult">Share</button>
 }
