--- a/MultiplicationTable/Shared/MainLayout.razor
+++ b/MultiplicationTable/Shared/MainLayout.razor
@@ -1,6 +1,14 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page vh-100">
+<div class="vh-100">
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">Multiplication Table</span>
+            <button class="btn btn-outline-dark">
+                <i class="bi bi-arrow-clockwise"></i>
+            </button>
+        </div>
+    </nav>
     <main>
         <article class="d-flex flex-column px-4 h-100">
             @Body
