--- a/MultiplicationTable/Pages/Index.razor
+++ b/MultiplicationTable/Pages/Index.razor
@@ -44,5 +44,5 @@
                          OrderByDescending="e=>e.Y"
                          PointColor="e=> GetPointColor(e)" />
     </ApexChart>
-    <button class="btn btn-dark w-100" onclick="shareResult">Share</button>
+    <button class="btn btn-dark w-100" onclick="shareResult()">Share</button>
 }
