--- a/MultiplicationTable/Shared/MainLayout.razor
+++ b/MultiplicationTable/Shared/MainLayout.razor
@@ -4,7 +4,7 @@
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
             <span class="navbar-brand mb-0 h1">Multiplication Table</span>
-            <button class="btn btn-outline-dark">
+            <button class="btn btn-outline-dark" onclick="location.reload()">
                 <i class="bi bi-arrow-clockwise"></i>
             </button>
         </div>
